# gotran

./: .buildinfo  .bumpversion.cfg  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  INSTALL  INSTALL.md  Makefile  README  README.md  TODO  _config.yml  _toc.yml  bitbucket-pipelines.yml  deploy_docs.sh  environment.yml  genindex.html  gotran.algorithms.html  gotran.codegeneration.html  gotran.common.html  gotran.html  gotran.input.html  gotran.model.html  gotran.scripts.html  gotran.solver.html  index.html  install_sundials.sh  modules.html  objects.inv  py-modindex.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: github-pages.yml  main.yml
_modules/: index.html
_modules/gotran/: common.html
_modules/modelparameters/: config.html  logger.html  parameterdict.html  parameters.html  utils.html
_sources/: gotran.codegeneration.rst.txt  gotran.common.rst.txt  gotran.rst.txt  gotran.scripts.rst.txt  index.rst.txt
_static/: documentation_options.js
bench/: winslow.ode  winslow_jit.py  winslow_python.py
demo/flaim/: flaim.ode
demo/gotran2c/: .gitignore  Makefile  README.md  demo.c  demo.py  tentusscher_panfilov_2006_M_cell.ode
demo/gotran2julia/: README.md  demo.jl  tentusscher_panfilov_2006_M_cell.ode
demo/gotran2opencl/: Makefile  demo.ipynb
demo/gotran2py/: README.md  demo.py
demo/import_ode/: Na_SCN5A.ode  Na_tentusscher.ode  tentusscher_panfilov_2006_M_cell_import.ode
demo/panfilov/: demo.py  democ.py  panfilov.cm  panfilov.ode  winslow.ode
demo/simple_markov_model/: demo_simple_markov.ode  demo_simple_markov_with_solved_state.ode
demo/tentusscher/: demo.py
doc/source/: conf.py  conf.py~  gotran.input.rst~  index.rst  index.rst~  modules.rst
docs/: Makefile  gotran.algorithms.rst  gotran.codegeneration.rst  gotran.common.rst  gotran.input.rst  gotran.model.rst  gotran.scripts.rst  quickstart.md
docs/source/: conf.py  gotran.algorithms.rst  gotran.model.rst  gotran.solver.rst  index.rst
gotran/: __init__.py  __main__.py
gotran/algorithms/: __init__.py  symbolicnewtonsolution.py
gotran/codegeneration/: LatexCodeGenerator.py  __init__.py  algorithmcomponents.py  avoidsympycontractions.py  codecomponent.py  codegenerator.py  codegenerator2.py  codegenerators.py  compilemodule.py  compilemodule2.py  gosscodegenerator.py  latexcodegenerator.py  latexcodegenerator2.py  oderepresentation.py  solvercomponents.py  sympy_cse.py
gotran/common/: __init__.py  dicts.py  disk.py  options.py
gotran/input/: __init__.py  cellml.py  cellml2.py  mathml.py
gotran/model/: __init__.py  algorithmcomponents.py  cellmodel.py  expressions.py  expressions2.py  loadmodel.py  loadmodel2.py  ode.py  ode2.py  odebasecomponent.py  odecomponent.py  odecomponents.py  odecomponents2.py  odeobjects.py  odeobjects2.py  utils.py
gotran/scripts/: README  __init__.py  cellml2gotran.py  gotran2c.py  gotran2cpp.py  gotran2cuda.py  gotran2dolfin.py  gotran2julia.py  gotran2latex.py  gotran2matlab.py  gotran2md.py  gotran2opencl.py  gotran2py.py  gotranexport.py  gotranprobe.py  gotranrun.py
gotran/solver/: __init__.py  _assimulo.py  _scipy.py  odesolver.py  scipysolver.py  sundialssolver.py  utils.py
gotran2/: __init__.py
gotran2/algorithms/: __init__.py  symbolicnewtonsolution.py
gotran2/codegeneration/: codegenerator.py  compilemodule.py  gosscodegenerator.py  oderepresentation.py
gotran2/common/: __init__.py  dicts.py  disk.py
gotran2/input/: cellml.py
gotran2/model/: __init__.py  cellmodel.py  loadmodel.py  ode.py  odeobjects.py
sandbox/: README
sandbox/cellml/: Hinch_et_al_2004.ode  Niederer_et_al_2006.cellml  Niederer_et_al_2006.ode  Pandit_Hinch_Niederer_Model.ode  Pandit_et_al_2001_endo.cellml  beeler_reuter_1977.cellml  beeler_reuter_1977_version06.ode  grandi_pasqualini_bers_2010.ode  irvine_jafri_winslow_1999.cellml  irvine_model_1999.ode  iyer_2004.ode  iyer_mazhari_winslow_2004.cellml  maleckar_2009.ode  maleckar_greenstein_trayanova_giles_2009.cellml  maltsev_2009.ode  maltsev_2009_paper.cellml  niederer_2006.ode  pandit_et_al_2001_endo.ode  rice_model_2008.ode  severi_fantini_charawi_difrancesco_2012.ode  shannon_2004.ode  shannon_wang_puglisi_weber_bers_2004_b.cellml  tentusscher_2004_mcell.ode  tentusscher_noble_noble_panfilov_2004_a.cellml  tentusscher_panfilov_2006_M_cell.ode  terkildsen_2008.ode  terkildsen_niederer_crampin_hunter_smith_2008.cellml  test_cellml.py  winslow_model_1999.ode  winslow_rice_jafri_marban_ororke_1999.cellml
sandbox/flaim/: flaim.ode
sandbox/gpu/: beeler_reuter_1977.ode  cossplotter.py  cosstester.py  cuda_vs_goss.py  cudaodesystemsolver.py  grandi_pasqualini_bers_2010.ode  tentusscher_panfilov_2006_M_cell.ode  tentusscher_panfilov_2006_M_cell_continuous.ode  test_gpu.py  testeverything.py
sandbox/jacobian/: test.py  (+1 more)
scripts/: cellml2gotran  cellml2gotran.py  gotran2  gotran2c  gotran2cpp  gotran2cuda  gotran2dolfin  gotran2julia  gotran2latex  gotran2latex2  gotran2matlab  gotran2opencl  gotran2py  gotranexport  gotranprobe  gotranprobe2  gotranrun  gotranrun2
src/: __init__.py  cellmodel.py
test/: test.py
tests/: test_scipts.py
utils/: check-line-length  clean-files  count-codelines  fixmes  listfiles.py  notes  run_tests.py  test_scripts.py  todos
(+136 files in other folders)
