[metadata]
name = gotran
version = 2022.2.0
description = A declarative language describing ordinary differential equations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/gotran
author = Johan Hake, Henrik Finsberg, Kristian G Hustad
author_email = henriknf@simula.no
license = LGPL-3.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = ODE, solver, system, equations, cuda

[options]
packages = find:
install_requires =
    modelparameters
    networkx
    numpy
    packaging
    scipy
python_requires = >=3.6
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pre-commit
    twine
    wheel
doc =
    Sphinx
    pandoc
    sphinx-rtd-theme
jit =
    cppyy
plot =
    matplotlib
test =
    psutil
    pytest
    pytest-cov

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731, C901
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=gotran --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[mypy]
files = gotran,tests
ignore_missing_imports = true
exclude = docs
