[metadata]
name = gotran
version = 2023.1.0
description = A declarative language describing ordinary differential equations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ComputationalPhysiology/gotran
author = Johan Hake, Henrik Finsberg, Kristian G Hustad
author_email = henriknf@simula.no
license = LGPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = ODE, solver, system, equations, cuda

[options]
packages = find:
install_requires =
    modelparameters
    networkx
    numpy
    packaging
    scipy
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    gotran=gotran.__main__:main
    cellml2gotran=gotran.scripts.cellml2gotran:main
    gotran2c=gotran.scripts.gotran2c:main
    gotran2cpp=gotran.scripts.gotran2cpp:main
    gotran2dolfin=gotran.scripts.gotran2dolfin:main
    gotran2julia=gotran.scripts.gotran2julia:main
    gotran2latex=gotran.scripts.gotran2latex:main
    gotran2matlab=gotran.scripts.gotran2matlab:main
    gotran2opencl=gotran.scripts.gotran2opencl:main
    gotran2py=gotran.scripts.gotran2py:main
    gotranexport=gotran.scripts.gotranexport:main
    gotranrun=gotran.scripts.gotranrun:main
    gotran2md=gotran.scripts.gotran2md:main

[options.extras_require]
dev =
    black
    bump2version
    flake8
    ipython
    isort
    mypy
    pdbpp
    pip
    pre-commit
    pre-commit
    twine
    wheel
docs =
    jupyter-book
jit =
    cppyy
plot =
    matplotlib
test =
    psutil
    pytest
    pytest-cov

[flake8]
exclude = docs
ignore = E203, E266, E501, W503, E731, C901
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[aliases]
test = pytest

[tool:pytest]
addopts = --cov=gotran --cov-report html --cov-report xml --cov-report term-missing -v
testpaths =
    tests

[mypy]
files = gotran,tests
ignore_missing_imports = true
exclude = docs
